# ComplexLibrary

./: .travis.yml  AUTHORS  CMakeLists.txt  build.bat  build.yml
src/: complex.hpp
tests/: Tests.cpp
